--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@types/react": "^16.14.2",
     "@types/react-big-calendar": "^0.24.8",
     "@types/react-dom": "^16.9.10",
+    "@types/react-modal": "^3.10.6",
     "@types/react-redux": "^7.1.12",
     "@types/react-router-dom": "^5.1.6",
     "@types/validator": "^13.1.1",
@@ -23,10 +24,14 @@
     "query-string": "^6.13.7",
     "react": "^17.0.1",
     "react-big-calendar": "^0.30.0",
+    "react-datetime-picker": "^3.0.4",
     "react-dom": "^17.0.1",
+    "react-modal": "^3.12.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
     "redux-thunk": "^2.3.0",
     "sweetalert2": "^10.12.5",
     "sweetalert2-react-content": "^3.2.2",
